Add favicon support

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/static/css/grids-responsive-min.css">
         <link rel="stylesheet" href="/static/css/hint.min.css">
         <link rel="stylesheet" href="/static/css/style.css">
-        <link rel="shortcut icon" href="/static/favicon.ico">
+        <link rel="shortcut icon" href="/static/{{ favicon }}">
     </head>
     <body>
         <div id="wrapper">
