--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,11 @@
             </header>
 
             {% block content %}{% endblock %}
+
+            <footer>
+                <a href="https://gitlab.com/postmarketOS/apkbrowser">APKBrowser</a> by
+                <a href="https://postmarketos.org">postmarketOS</a>
+            </footer>
         </div>
     </body>
 </html>
