Fix page title on packages list

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <main id="contents">
-        <div class="grid-head">Contents filter</div>
+        <div class="grid-head">Package filter</div>
         <div class="grid-body" id="search-form">
             <div class="pure-g">
                 <div class="pure-u-1">
