Fix contents link on package page

--- a/templates/package.html
+++ b/templates/package.html
@@ -121,7 +121,10 @@
                             </tr>
                             <tr>
                                 <th class="header">Contents</th>
-                                <td><a href="TODO">Contents of package</a></td>
+                                <td>
+                                    <a href="/contents?name={{ pkg.name }}&repo={{ pkg.repo }}&branch={{ branch }}&arch={{ pkg.arch }}">
+                                        Contents of package
+                                    </a></td>
                             </tr>
                         </table>
                     </div>
