--- a/templates/contents.html
+++ b/templates/contents.html
@@ -63,6 +63,29 @@
                 </div>
             </div>
         </div>
+
+        <div class="pure-menu pure-menu-horizontal" id="pagination" style="margin-bottom: 2em;">
+            <nav>
+                <ul class="pure-menu-list">
+                    <li class="pure-menu-item">
+                        <a class="pure-menu-link"
+                           href="?page=1&file={{ form.file }}&path={{ form.path }}&name={{ form.name }}&branch={{ form.branch }}&repo={{ form.repo }}&arch={{ form.arch }}">«</a>
+                    </li>
+                    {% for i in range(pag_start, pag_stop) %}
+                        <li class="pure-menu-item{% if i + 1 == form.page %} active{% endif %}">
+                            <a class="pure-menu-link"
+                               href="?page={{ i + 1 }}&file={{ form.file }}&path={{ form.path }}&name={{ form.name }}&branch={{ form.branch }}&repo={{ form.repo }}&arch={{ form.arch }}">{{ i + 1 }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                    <li class="pure-menu-item">
+                        <a class="pure-menu-link"
+                           href="?page={{ pages }}&file={{ form.file }}&path={{ form.path }}&name={{ form.name }}&branch={{ form.branch }}&repo={{ form.repo }}&arch={{ form.arch }}">»</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
         <div class="table-responsive">
             <table class="pure-table pure-table-striped">
                 <thead>
