--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,16 @@
         <link rel="stylesheet" href="/static/css/pure-min.css">
         <link rel="stylesheet" href="/static/css/grids-responsive-min.css">
         <link rel="stylesheet" href="/static/css/hint.min.css">
+        <link rel="stylesheet" href="/static/css/fonts.css">
         <link rel="stylesheet" href="/static/css/style.css">
-        <link rel="shortcut icon" href="/static/{{ favicon }}">
+        <link rel="icon" type="image/png" sizes="48x48" href="/static/icons/{{ favicon }}48.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/static/icons/{{ favicon }}96.png">
+        <link rel="icon" type="image/png" sizes="144x144" href="/static/icons/{{ favicon }}144.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="/static/icons/{{ favicon }}192.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="/static/icons/{{ favicon }}120.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="/static/icons/{{ favicon }}152.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="167x167" href="/static/icons/{{ favicon }}167.png">
+        <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/static/icons/{{ favicon }}180.png">
     </head>
     <body>
         <div id="wrapper">
@@ -36,10 +44,7 @@
                     </nav>
                     <nav class="pure-menu pure-menu-horizontal menu-external">
                         <ul class="pure-menu-list">
-                            <li class="pure-menu-item"><a href="{{ external_wiki }}" class="pure-menu-link">wiki</a>
-                            </li>
-                            <li class="pure-menu-item"><a href="{{ external_mirrors }}"
-                                                          class="pure-menu-link">mirrors</a>
+                            <li class="pure-menu-item"><a href="{{ external_website }}" class="pure-menu-link">website</a>
                             </li>
                         </ul>
                     </nav>
