--- a/templates/contents.html
+++ b/templates/contents.html
@@ -10,21 +10,22 @@
                 <div class="pure-u-1">
                     <form class="pure-form pure-form-stacked">
                         <div class="pure-g">
-                            <div class="pure-u-1 pure-u-md-4-24 form-field hint--top"
+                            <div class="pure-u-1 {{ 'pure-u-md-4-24' if show_branch else 'pure-u-md-5-24' }} form-field hint--top"
                                  aria-label="Use * and ? as wildcards">
                                 <input class="pure-input-1" type="text" id="file" name="file" value="{{ form.file }}"
                                        placeholder="File" autofocus>
                             </div>
-                            <div class="pure-u-1 pure-u-md-4-24 form-field hint--top"
+                            <div class="pure-u-1 {{ 'pure-u-md-4-24' if show_branch else 'pure-u-md-5-24' }} form-field hint--top"
                                  aria-label="Use * and ? as wildcards">
                                 <input class="pure-input-1" type="text" id="path" name="path" value="{{ form.path }}"
                                        placeholder="Path">
                             </div>
-                            <div class="pure-u-1 pure-u-md-4-24 form-field hint--top"
+                            <div class="pure-u-1 {{ 'pure-u-md-4-24' if show_branch else 'pure-u-md-5-24' }} form-field hint--top"
                                  aria-label="Use * and ? as wildcards">
                                 <input class="pure-input-1" type="text" id="name" name="name" value="{{ form.name }}"
                                        placeholder="Package">
                             </div>
+                            {% if show_branch %}
                             <div class="pure-u-1 pure-u-md-2-24 form-field">
                                 <select class="pure-input-1" name="branch" id="branch">
                                     <option value="" disabled>Branch</option>
@@ -35,6 +36,7 @@
                                     {% endfor %}
                                 </select>
                             </div>
+                            {% endif %}
                             <div class="pure-u-1 pure-u-md-2-24 form-field">
                                 <select class="pure-input-1" name="repo" id="repo">
                                     <option value="" disabled selected>Repository</option>
@@ -92,7 +94,9 @@
                 <tr>
                     <th>File</th>
                     <th>Package</th>
+                    {% if show_branch %}
                     <th>Branch</th>
+                    {% endif %}
                     <th>Repository</th>
                     <th>Architecture</th>
                 </tr>
@@ -104,7 +108,9 @@
                         <td>
                             <a href="{{ url_for('package', branch=form.branch, repo=entry.repo, arch=entry.arch, name=entry.name) }}">{{ entry.name }}</a>
                         </td>
+                        {% if show_branch %}
                         <td>{{ form.branch }}</td>
+                        {% endif %}
                         <td class="repo">
                             <a class="hint--right"
                                href="?file={{ form.file }}&path={{ form.path }}&name={{ form.name }}&branch={{ form.branch }}&repo={{ entry.repo }}&arch={{ entry.arch }}">
