--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,12 @@
 
                     <form class="pure-form pure-form-stacked">
                         <div class="pure-g">
-                            <div class="pure-u-1 pure-u-md-4-24 form-field hint--top"
+                            <div class="pure-u-1 {{ 'pure-u-md-5-24' if show_branch else 'pure-u-md-6-24' }} form-field hint--top"
                                  aria-label="Use * and ? as wildcards">
                                 <input class="pure-input-1" type="text" id="name" name="name" value="{{ form.name }}"
                                        placeholder="Package name" autofocus>
                             </div>
+                            {% if show_branch %}
                             <div class="pure-u-1 pure-u-md-2-24 form-field">
                                 <select class="pure-input-1" name="branch" id="branch">
                                     <option value="" disabled>Branch</option>
@@ -26,6 +27,7 @@
                                     {% endfor %}
                                 </select>
                             </div>
+                            {% endif %}
                             <div class="pure-u-1 pure-u-md-2-24 form-field">
                                 <select class="pure-input-1" name="repo" id="repo">
                                     <option value="" disabled selected>Repository</option>
@@ -46,7 +48,7 @@
                                     {% endfor %}
                                 </select>
                             </div>
-                            <div class="pure-u-1 pure-u-md-2-24 form-field">
+                            <div class="pure-u-1 {{ 'pure-u-md-2-24' if show_branch else 'pure-u-md-3-24' }} form-field">
                                 <select class="pure-input-1" name="origin" id="origin">
                                     <option value="" disabled selected>Subpackages</option>
                                     <option{% if form.arch == "hide" %} selected{% endif %} value="hide">
@@ -107,7 +109,9 @@
                     <th>Version</th>
                     <th>Project</th>
                     <th>Licence</th>
+                    {% if show_branch %}
                     <th>Branch</th>
+                    {% endif %}
                     <th>Repository</th>
                     <th>Architecture</th>
                     <th>Maintainer</th>
@@ -130,7 +134,9 @@
                         </td>
                         <td class="url"><a href="{{ package.url }}">URL</a></td>
                         <td class="license">{{ package.license }}</td>
+                        {% if show_branch %}
                         <td class="branch">{{ form.branch }}</td>
+                        {% endif %}
                         <td class="repo">
                             <a class="hint--right" aria-label="Filter packages in the main repository"
                                href="?name=&branch={{ form.branch }}&repo={{ package.repo }}&arch=&maintainer=">
