disable dark mode until it can be fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -440,6 +440,7 @@ ul.compact {
     margin-left: 16px;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
     body {
         background: #232729;
@@ -534,3 +535,4 @@ ul.compact {
         background-color: rgb(80, 80, 80);
     }
 }
+*/
